plugins {
	id 'fabric-loom' version '1.9-SNAPSHOT'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
	maven { url = "https://jitpack.io" }
	maven {
		name = "FzzyMaven"
		url = "https://maven.fzzyhmstrs.me/"
	}
}

/*List<ExternalModuleDependency> externalDeps = new ArrayList<ExternalModuleDependency>()

dependencies {
	externalDeps.add(implementation include('net.bytebuddy:byte-buddy-agent:1.14.0'))
}*/

loom {
	accessWidenerPath = file("src/main/resources/tameable-foxes.accesswidener")
	//splitEnvironmentSourceSets()

	/*mods {
		"tameable-foxes" {
			sourceSet(sourceSets.main)
			sourceSet(sourceSets.client)
			dependency(externalDeps.toArray(new ExternalModuleDependency[]{}))
		}
	}*/
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation "me.fzzyhmstrs:fzzy_config:${project.fzzyConfigVersion}"
	implementation include('net.bytebuddy:byte-buddy-agent:1.14.0')
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17

}

tasks.withType(JavaExec).configureEach {
	jvmArgs += ["--add-modules", "jdk.attach"]
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}